--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>محقق الأحاديث النبوية</title>
+      <!-- Meta Description -->
+  <meta
+    name="description"
+    content="موقع متخصص في التحقق من صحة الأحاديث النبوية الشريفة، ومعرفة الحديث الصحيح والضعيف والموضوع مع التخريج والحكم العلمي من مصادر السنة الموثوقة."
+  />
+
+  <!-- Keywords -->
+  <meta
+    name="keywords"
+    content="التحقق من صحة الأحاديث، صحة الحديث النبوي، حديث صحيح، حديث ضعيف، حديث موضوع، تخريج الأحاديث، السنة النبوية، حكم الحديث"
+  />
+  <meta property="og:title" content="محقق الأحاديث النبوية" />
+  <meta
+    property="og:description"
+    content="منصة موثوقة لمعرفة صحة الأحاديث النبوية مع التخريج والحكم العلمي المعتمد."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ar_AR" />
+
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
