--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     name="description"
     content="موقع متخصص في التحقق من صحة الأحاديث النبوية الشريفة، ومعرفة الحديث الصحيح والضعيف والموضوع مع التخريج والحكم العلمي من مصادر السنة الموثوقة."
   />
-
+    <meta name="author" content="يسِّرها" />
+    <meta name="robots" content="index, follow" />
   <!-- Keywords -->
   <meta
     name="keywords"
     content="التحقق من صحة الأحاديث، صحة الحديث النبوي، حديث صحيح، حديث ضعيف، حديث موضوع، تخريج الأحاديث، السنة النبوية، حكم الحديث"
   />
-  <meta property="og:title" content="محقق الأحاديث النبوية" />
+  <meta property="og:title" content="محقق الأحاديث النبوية | لمعرفة الحديث الصحيح والضعيف" />
   <meta
     property="og:description"
     content="منصة موثوقة لمعرفة صحة الأحاديث النبوية مع التخريج والحكم العلمي المعتمد."
@@ -24,7 +25,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR" />
 
-
+    <meta property="og:image" content="https://i.postimg.cc/rwk9w75W/adaft-ʿnwan-(3).png" />
+    <meta property="og:url" content="https://hadith-check.netlify.app/" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +71,7 @@
     }
     </script>
   <link rel="stylesheet" href="/index.css">
-  <link rel="shortcut icon" href="/quran.png" type="image/png">
+  <link rel="shortcut icon" href="/icon.webp" type="image/png">
 </head>
   <body class="bg-soft">
     <div id="root"></div>
