--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>محقق الأحاديث النبوية</title>
+    <title>محقق الأحاديث النبوية | لمعرفة الحديث الصحيح والضعيف</title>
       <!-- Meta Description -->
   <meta
     name="description"
