--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
         background-image: radial-gradient(#e2e8f0 0.5px, transparent 0.5px);
         background-size: 24px 24px;
       }
+      @keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.2s ease-out;
+}
+
     </style>
     <script type="importmap">
     {
